Добавила методы зацикленного ввода и обработки исключений